<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/min_margin"
    android:orientation="vertical"
    android:padding="@dimen/pop_up_padding"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        style="@style/pop_up_full_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_popup_content"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/currencyLanguagePopUp"
        style="@style/currencyLanguage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="60sp"
        android:layout_marginTop="60sp"
        android:text="@string/name_language"
        android:textAllCaps="true" />


    <Button
        android:id="@+id/popUpOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/min_margin"
        android:background="@color/colorPrimary"
        android:stateListAnimator="@null"
        android:text="OK"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/popUpChange"
        style="@style/pop_up_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/pop_up_change"
        android:textAllCaps="false" />

</LinearLayout>