<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_detect"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/activity_vertical_margin"
            app:srcCompat="@drawable/img_romerock_logo_gray" />

        <TextView
            android:id="@+id/currencyLanguage"
            style="@style/currencyLanguage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/name_language"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/languageDetect"
            style="@style/currencyLanguage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/language_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/currency_text_size"
            android:background="@drawable/border_language"
            android:text="@string/language"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textLanguage"
            style="@style/textLanguage"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="10sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currencyLanguage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:text="@string/default_settings" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_detect"
        style="@style/buttonStyleMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center|center_vertical"
        android:text="@string/select_language"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

</RelativeLayout>
